tests/negative/neg_rule4_moved.safe
-- Test: neg_rule4_moved
-- Description: Dereference of an access value after it has been moved.
--   After the move, the source variable is null and cannot be dereferenced.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.2.p96c:0b45de01
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.4.p136:fa5e94b7
-- Expected: REJECT use_after_move

package Moved_Deref_Test

   type Data is record
      Value : Integer;


   type Data_Ptr is access Data;

   --  Use_After_Move: dereferences Source after it has been moved to Target.
   function Use_After_Move
      Source : Data_Ptr = new ((Value = 42) as Data);
      Target : Data_Ptr = null;
      V      : Integer;

      Target = Source;
      --  Source is now null (moved).
      V = Source.all.Value;  -- ERROR: Source has been moved (is null)



